--- a/index.html
+++ b/index.html
@@ -2,42 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Checker Board</title>
+  <title>Checkerboard</title>
   <style>
-  body {
-    font: 12px sans-serif;
-  }
-
-  .board {
-    margin-top:75px;
-    margin-left:425px;
-  }
-
-  .light rect {
-    fill: #fff;
-  }
-
-  .dark rect {
-    fill: steelblue;
-  }
-
+    body {font:12px sans-serif;}
+    #page {display:block;margin:0 auto;}
+    #board {margin-bottom:1em;}
+    .bordered {border:1px solid #eee;}
+    .light rect {fill: #fff;}
+    .dark rect {fill: steelblue;}
   </style>
 </head>
 <body>
+  <div id="page"></div>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script>
-
-    // GENERATE THE JSON DATA
+    var s = 75;
     var rows = [8,7,6,5,4,3,2,1];
     var columns = ["a","b","c","d","e","f","g","h"];
-    var spaces = [];
 
+    var page = d3.select("div#page")
+        .attr("style","width:" + (s*rows.length) + "px;");
+
+    var header = page.append("div")
+        .attr("id","header");
+
+    var title = header.append("h1")
+        .attr("id","title")
+        .text("Checkerboard");
+
+    var board = page.append("svg")
+        .attr("id","board")
+        .attr("height",s* rows.length)
+        .attr("width",s * columns.length);
+
+    var tile_layer = board.selectAll("g");
+
+    var tiles = [];
     for(i in columns){
       var c = i
       column = columns[i]
       for(i in rows){
         row = rows[i]
-        spaces.push(
+        tiles.push(
           {
             column: column,
             row: row,
@@ -48,13 +54,9 @@
           }
         );
       };
-    }; //-> [{column: "a", row: 1, name: "a1"} ... {column: "g", row: 8, name: "g8"]
+    }; //tiles = [{column: "a", row: 1, name: "a1"} ... {column: "g", row: 8, name: "g8"]
 
-    // BUILD THE BOARD AND SPACES
-    var spaceHeight = 75;
-    var board = d3.select("body").append("svg").attr("height",spaceHeight* rows.length).attr("width",spaceHeight * columns.length).attr("class","board");
-    var tile_layer = board.selectAll("g")
-    var tile = tile_layer.data(spaces).enter().append("g")
+    var tile = tile_layer.data(tiles).enter().append("g")
         .attr("id", function(d){
           return d["name"]
         })
@@ -62,15 +64,15 @@
           return "space" + d["column"] + " " + d["row"] + " " + d["color"]
         })
         .attr("transform", function(d, i) { 
-          return "translate(" + (d["x"] * spaceHeight) + "," + (d["y"] * spaceHeight) + ")"; 
+          return "translate(" + (d["x"] * s) + "," + (d["y"] * s) + ")"; 
         });
 
     var tile_rect = tile.append("rect")
-        .attr("width",spaceHeight)
-        .attr("height",spaceHeight)
-        .attr("stroke","#000")
+        .attr("width",s)
+        .attr("height",s)
+        .attr("stroke","#000");
 
-    var tile_label = tile.append("text")
+    var tile_text = tile.append("text")
         .attr("x", function(d){
           return d["x"]
         })
@@ -81,7 +83,11 @@
           return d["name"];
         })
         .attr("dy", "10px")
-        .attr("dx", "3px")
+        .attr("dx", "3px");
+
+    var footer = page.append("div").attr("id","footer");
+
+    var source = footer.append("a").attr("href","https://github.com/s2t2/checkerboard").text("source");
 
     function colorAlternator(n){
       if(n % 2 == 0){ 
@@ -90,7 +96,7 @@
       else { 
         return "dark"
       }
-    }
+    };
   </script>
 </body>
 </html>
